<resources>
    <string name="app_name">IOUnote</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_inventory">Inventory</string>
    <string name="button_mine">Create</string>
    <string name="button_request">Request</string>
    <string name="button_send">Send</string>
    <string name="button_about">About</string>
    <string name="button_hello">Hello from C++!</string>
</resources>
